# markup_fmt

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  dprint.json  package.json  pnpm-workspace.yaml  test-i18n.vue
dprint_plugin/: Cargo.toml
dprint_plugin/deployment/: schema.json
dprint_plugin/deployment/npm/: index.ts  package.json  tsconfig.json
dprint_plugin/examples/: fmt_ext.rs
dprint_plugin/src/: config.rs  lib.rs
dprint_plugin/tests/: integration.rs
dprint_plugin/tests/integration/: angular.component.html  basic.astro  basic.jinja  basic.svelte  basic.svelte.snap  basic.vto  basic.vue  basic.vue.snap  class-attr.html  deno-26407.html  eval.vto  event.html  front-matter-edge.astro  i18n-mixed-content.vue  i18n-multiple-text-nodes.vue  i18n-no-format.toml  i18n-no-format.vue  i18n-no-lang.vue  i18n-squash.toml  i18n-with-comment.vue  i18n.vue  import.vto  indent-with-quotes.html  indent.html  issue-141.svelte  issue-142.astro  issue-143.html  issue-153.astro  issue-153.html  issue-153.toml  issue-156.toml  issue-156.vue  issue-212.vue  issue-6.svelte  issue-6.svelte.snap  issue-77.astro  json.html  nested-jsx.astro  nested-template.astro  quotes.vue  (+3 more)
dprint_plugin/tests/integration/biome/: angular.component.html.snap  basic.astro.snap  basic.svelte.snap  basic.vto.snap  basic.vue.snap  eval.vto.snap  front-matter-edge.astro.snap  i18n-mixed-content.vue.snap  i18n-multiple-text-nodes.vue.snap  i18n-no-format.vue.snap  i18n-no-lang.vue.snap  i18n-with-comment.vue.snap  i18n.vue.snap  import.vto.snap  indent-with-quotes.html.snap  indent.html.snap  issue-141.svelte.snap  issue-142.astro.snap  issue-143.html.snap  issue-153.astro.snap  issue-153.html.snap  issue-156.vue.snap  issue-6.svelte.snap  issue-77.astro.snap  json.html.snap  nested-jsx.astro.snap  nested-template.astro.snap  quotes.vue.snap  return.astro.snap  style-attr.html.snap  style.html.snap
dprint_plugin/tests/integration/dprint_ts/: angular.component.html.snap  basic.astro.snap  basic.jinja.snap  basic.svelte.snap  basic.vto.snap  basic.vue.snap  class-attr.html.snap  deno-26407.html.snap  deno-26560.html.snap  eval.vto.snap  event.html.snap  front-matter-edge.astro.snap  i18n-mixed-content.vue.snap  i18n-multiple-text-nodes.vue.snap  i18n-no-format.vue.snap  i18n-no-lang.vue.snap  i18n-squash.vue.snap  i18n-with-comment.vue.snap  i18n.vue.snap  import.vto.snap  indent-with-quotes.html.snap  indent.html.snap  issue-141.svelte.snap  issue-142.astro.snap  issue-143.html.snap  issue-153.astro.snap  issue-153.html.snap  issue-156.vue.snap  issue-212.vue.snap  issue-6.svelte.snap  issue-77.astro.snap  json.html.snap  nested-jsx.astro.snap  nested-template.astro.snap  quotes.vue.snap  return.astro.snap  style-attr.html.snap  style.html.snap
markup_fmt/: Cargo.toml  README.md
markup_fmt/examples/: fmt.rs
markup_fmt/src/: ast.rs  config.rs  ctx.rs  error.rs  helpers.rs  lib.rs  main.rs  parser.rs  printer.rs  state.rs
markup_fmt/tests/: fmt.rs
markup_fmt/tests/fmt/angular/blocks/: defer.component.html  defer.component.snap
markup_fmt/tests/fmt/angular/control-flow/: after-for.component.html  after-for.component.snap  child.component.snap  element-tags.component.snap  for.component.html  for.component.snap  if.component.html  if.component.snap  ignore.component.html  ignore.component.snap  switch.component.html  switch.component.snap  unclosed.component.snap  unknown-block.component.snap  with-comment.component.snap
markup_fmt/tests/fmt/angular/if/: if-else.component.html  if-else.component.snap  if-only.component.html  if-only.component.snap
markup_fmt/tests/fmt/angular/issue-140/: fixture.component.html  fixture.component.snap
markup_fmt/tests/fmt/angular/let/: let.component.html  let.component.snap
markup_fmt/tests/fmt/angular/next-control-flow-same-line/: config.toml  fixture.component.disabled.snap  fixture.component.enabled.snap  fixture.component.html
markup_fmt/tests/fmt/angular/self-closing/: config.toml  self-closing.component.enabled.snap  self-closing.component.html
markup_fmt/tests/fmt/astro/attr-shorthand/: config.toml  fixture.astro  fixture.default.snap  fixture.disabled.snap  fixture.enabled.snap
markup_fmt/tests/fmt/astro/basic/: attr-template.astro  attr-template.snap  doctype.astro  doctype.snap
markup_fmt/tests/fmt/astro/front-matter/: deno-26786.astro  deno-26786.snap  front-matter.astro  front-matter.snap  issue-130.astro  issue-130.snap  issue-220.astro  issue-220.snap
markup_fmt/tests/fmt/astro/issue-9/: 1.astro  1.snap  2.astro  2.snap  3.astro  3.snap  4.astro  4.snap  5.astro  5.snap  6.astro  6.snap  7.astro  7.snap
markup_fmt/tests/fmt/astro/other/: directive.astro  (+17 more)
(+600 files in other folders)
