[package]
name = "dprint_plugin_markup"
version = "0.5.1"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "markup_fmt as dprint plugin."
repository = "https://github.com/g-plane/markup_fmt"
license = "MIT"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0"
dprint-core = { version = "0.65", default-features = false, features = [
    "wasm",
] }
markup_fmt = { path = "../markup_fmt", features = ["config_serde"] }
serde_json = "1.0"

[dev-dependencies]
insta = { version = "1.34", features = ["glob"] }
