[package]
name = "dprint_plugin_markup"
version = "0.19.1"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "markup_fmt as dprint plugin."
repository = "https://github.com/g-plane/markup_fmt"
license = "MIT"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0"
dprint-core = { version = "0.66", default-features = false, features = [
    "wasm",
] }
markup_fmt = { path = "../markup_fmt", features = ["config_serde"] }
serde_json = "1.0"

[dev-dependencies]
dprint-plugin-biome = "0.0"
dprint-plugin-json = { version = "0.19", features = ["wasm"] }
dprint-plugin-typescript = { version = "0.93", features = ["wasm"] }
insta = { version = "1.38", features = ["glob"] }
malva = { version = "0.10", features = ["config_serde"] }
similar-asserts = "1.5"
toml = "0.8"
