[package]
name = "markup_fmt"
version = "0.20.0"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "Configurable HTML, Vue, Svelte, Astro, Angular, Jinja, Twig, Nunjucks and Vento formatter."
repository = "https://github.com/g-plane/markup_fmt"
license = "MIT"
exclude = ["/tests"]

[dependencies]
aho-corasick = "1.1"
css_dataset = { version = "0.4", default-features = false, features = ["tags"] }
itertools = "0.13"
memchr = "2.7"
serde = { version = "1.0", optional = true }
tiny_pretty = { version = "0.2", features = ["unicode-width"] }

[dev-dependencies]
insta = { version = "1.39", features = ["glob"] }
similar-asserts = "1.5"
toml = "0.8"

[features]
config_serde = ["serde"]
