[package]
name = "markup_fmt"
version = "0.27.3"
edition = "2024"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "Configurable HTML, Vue, Svelte, Astro, Angular, Jinja, Twig, Nunjucks, Vento, Mustache, Handlebars and XML formatter."
repository = "https://github.com/g-plane/markup_fmt"
license = "MIT"
exclude = ["/tests"]

[dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
css_dataset = { version = "0.4", default-features = false, features = ["tags"] }
itertools = "0.14"
memchr = "2.8"
regex = "1.12"
serde = { version = "1.0", optional = true }
tiny_pretty = "0.4"

[dev-dependencies]
anyhow.workspace = true
insta.workspace = true
similar-asserts.workspace = true
toml.workspace = true

[features]
config_serde = ["serde"]
